--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,14 @@
     </dependency>
     <!-- jstl config end-->
     
+    <!--servlet api config start-->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.0-b01</version>
+    </dependency>
+    <!--servlet api config end-->
+    
 	</dependencies>
 	<build>
 		<finalName>smm</finalName>
